--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "react-transition-group": "^4.4.5",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
